# meta_analysis_and_umbrella

./: .gitignore  .travis.yml  COPYING  Dockerfile  MANIFEST.in  README.rst  THANKS.txt  TODO.rst  external_dependencies.txt  meta_analysis_and_umbrella.ini  requirements.rst  setup.cfg  setup.py  tox.ini
data/: Meg_Data_set_Gynecological.txt
docs/: conf.py  index.rst
documents_and_manuscript/: Margarita_Cariolou alias  Meg_Cupp alias  meta_analysis_methods_checklist_to_do.docx  notes_results_umbrella.txt
example_code/: Gastro Excess Sig.R  Gyn Ag.R  Hep Ag R.R  Multi Ag R.R  Multiple Excess Sig.R  Resp Ag R.R  Uri Ag R.R  credibility_ceilings_comparison.R  credibility_ceilings_docopt.R  flow_diagram.R  forest_plot.txt  funnel_plot.R  funnel_plot.rst  heterogeneity.R  pipeline_meta_analysis_and_umbrella.py  prevalence_meta_analysis.R  risk_of_bias.R  vitd_prevalence_and_mortality_script.R
meta_analysis_and_umbrella/: CredCeiling_Gyn_antonio.R  Fixed Effects Significance.R  Gast Ag.R  Gynecological Excess Sig.R  Hepatocellular Excess Sig.R  Neutrophils and cancer: Gastrointestinal meta-analyses  Neutrophils and cancer: Urinary meta-analyses  Prevalence_meta_analysis.R  Respiratory Excess Sig.R  ceiling.R  comparison.R  credibility_ceilings.R  credibility_ceilings_galanti_mod.R  credibility_ceilings_simple.R  excess_significance_method.txt  galanti_ceiling.R  heterogeneity.R  marg_vdchildren.R  margarita_latest_vdch.R  meta_analysis_and_umbrella.py  pipeline_meta_analysis_and_umbrella.ini  risk_of_bias.R  small_study_effects.R  vangelis_stata_credibilityceiling.do  (+2 more)
(+11 files in other folders)
