# Wheels are the standard for distributing Python packages and are replacing
# eggs
# https://hynek.me/articles/sharing-your-labor-of-love-pypi-quick-and-dirty/
# http://pythonwheels.com/ 
# Python configuration file for users to override setup.y, see:
# https://docs.python.org/3/distutils/configfile.html

[metadata]
description-file = README.rst
license_file = LICENSE

# The following is from: https://github.com/pypa/sampleproject/blob/master/setup.cfg

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
# Use this if:
#   1. Your project runs on Python 2 and 3 with no changes (i.e. it does not require 2to3).
#   2. Your project does not have any C extensions.
# https://packaging.python.org/distributing/#configuring-your-project

universal = 1

# Others:
[pep8]
#max-line-length=100
#ignore=E129
